--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "SQLAlchemy==2.0.*",
     "pydantic==1.10.*",
     "uvicorn==0.22.*",
+    "alembic==1.11.1",
 ]
 [project.optional-dependencies]
 test = [
