--- a/alembic.ini
+++ b/alembic.ini
@@ -36,10 +36,10 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to .\src\adjust_task\infrastructure\migrations/versions.  When using multiple version
+# to .\src\project\infrastructure\migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:.\src\adjust_task\infrastructure\migrations/versions
+# version_locations = %(here)s/bar:%(here)s/bat:.\src\project\infrastructure\migrations/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
