--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pydantic==1.10.*",
     "uvicorn==0.22.*",
     "alembic==1.11.1",
+    "aiosqlite==0.19.0"
 ]
 [project.optional-dependencies]
 test = [
